HallelujahLangV2/src/main/java/org/example/antlr/HallelujahLangParser.java
// Generated from D:/PUC CAMPINAS/untitled/src/main/java/org/example/antlr/HallelujahLang.g4 by ANTLR 4.13.1
package org.example.antlr;
 
	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;
	import org.example.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HallelujahLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATA_TYPE=1, EQUALITY_OPERATORS=2, ARITMETICAL_OPERATORS=3, COMPARISON_OPERATORS=4, 
		CLASS=5, EXTENDS=6, IMPLEMENTS=7, INTERFACE=8, METHOD=9, NEW=10, PACKAGE=11, 
		CONSTRUCTOR=12, IMPORT=13, THIS=14, INPUT=15, PRINT=16, RETURN=17, WHILE=18, 
		IF=19, ELSE=20, ELSEIF=21, BOOLEAN=22, BOOL_TRUE=23, BOOL_FALSE=24, FLOAT=25, 
		INT=26, STRING=27, VOID=28, NULL=29, ASSIGN=30, DIVIDE=31, MINUS=32, MULTIPLY=33, 
		PLUS=34, EQUALS=35, GREATER_EQUAL=36, GREATER_THAN=37, LESS_EQUAL=38, 
		LESS_THAN=39, NOT_EQUALS=40, AND=41, NOT=42, OR=43, COMMA=44, DOT=45, 
		SEMICOLON=46, LBRACE=47, RBRACE=48, LPAREN=49, RPAREN=50, LBRACKET=51, 
		RBRACKET=52, LINE_COMMENT=53, MULTILINE_COMMENT=54, BOOL_CONST=55, FLOAT_CONST=56, 
		ID=57, INT_CONST=58, STRING_CONST=59, WS=60;
	public static final int
		RULE_program = 0, RULE_package_declaration = 1, RULE_program_body = 2, 
		RULE_package_import = 3, RULE_class_declaration = 4, RULE_class_body = 5, 
		RULE_class_instance = 6, RULE_variable_declaration = 7, RULE_variable_assignment = 8, 
		RULE_variable_reference = 9, RULE_array_initializer = 10, RULE_array_access = 11, 
		RULE_array_declaration = 12, RULE_variable_statement = 13, RULE_parameters = 14, 
		RULE_parameter = 15, RULE_statement = 16, RULE_if_statement = 17, RULE_while_statement = 18, 
		RULE_return_statement = 19, RULE_method_declaration = 20, RULE_method_call = 21, 
		RULE_method_call_class = 22, RULE_method_call_this_class = 23, RULE_print_statement = 24, 
		RULE_input_statement = 25, RULE_interface_declaration = 26, RULE_interface_body = 27, 
		RULE_arguments = 28, RULE_constructor_declaration = 29, RULE_constructor_body = 30, 
		RULE_aritmetical_expression = 31, RULE_equality_expression = 32, RULE_comparison_expression = 33, 
		RULE_logical_not_expression = 34, RULE_logical_or_expression = 35, RULE_logical_and_expression = 36, 
		RULE_expression = 37, RULE_binary_operation = 38, RULE_operand = 39, RULE_callings = 40, 
		RULE_value = 41, RULE_comment = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "package_declaration", "program_body", "package_import", "class_declaration", 
			"class_body", "class_instance", "variable_declaration", "variable_assignment", 
			"variable_reference", "array_initializer", "array_access", "array_declaration", 
			"variable_statement", "parameters", "parameter", "statement", "if_statement", 
			"while_statement", "return_statement", "method_declaration", "method_call", 
			"method_call_class", "method_call_this_class", "print_statement", "input_statement", 
			"interface_declaration", "interface_body", "arguments", "constructor_declaration", 
			"constructor_body", "aritmetical_expression", "equality_expression", 
			"comparison_expression", "logical_not_expression", "logical_or_expression", 
			"logical_and_expression", "expression", "binary_operation", "operand", 
			"callings", "value", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'igreja'", "'estende'", "'implementa'", 
			"'feFaz'", "'obraDoSenhor'", "'nova'", "'alma'", "'fundacao'", "'arrebatandoDa'", 
			"'nestaIgreja'", "'responda'", "'pregue'", "'amem'", "'enquantoDeusQuiser'", 
			"'seDeusQuiser'", "'seDeusNaoQuiserEntao'", "'seDeusNaoQuiserTente'", 
			"'consciencia'", "'anjo'", "'demonio'", "'asas'", "'pes'", "'gloria'", 
			"'qualquer'", "'limbo'", "'='", "'/'", "'-'", "'*'", "'+'", "'=='", "'>='", 
			"'>'", "'<='", "'<'", "'!='", "'&&'", "'!'", "'||'", "','", "'.'", "';'", 
			"'{'", "'}'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATA_TYPE", "EQUALITY_OPERATORS", "ARITMETICAL_OPERATORS", "COMPARISON_OPERATORS", 
			"CLASS", "EXTENDS", "IMPLEMENTS", "INTERFACE", "METHOD", "NEW", "PACKAGE", 
			"CONSTRUCTOR", "IMPORT", "THIS", "INPUT", "PRINT", "RETURN", "WHILE", 
			"IF", "ELSE", "ELSEIF", "BOOLEAN", "BOOL_TRUE", "BOOL_FALSE", "FLOAT", 
			"INT", "STRING", "VOID", "NULL", "ASSIGN", "DIVIDE", "MINUS", "MULTIPLY", 
			"PLUS", "EQUALS", "GREATER_EQUAL", "GREATER_THAN", "LESS_EQUAL", "LESS_THAN", 
			"NOT_EQUALS", "AND", "NOT", "OR", "COMMA", "DOT", "SEMICOLON", "LBRACE", 
			"RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "BOOL_CONST", "FLOAT_CONST", "ID", "INT_CONST", 
			"STRING_CONST", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HallelujahLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public HallelujahLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Package_declarationContext package_declaration;
		public Program_bodyContext program_body;
		public Package_declarationContext package_declaration() {
			return getRuleContext(Package_declarationContext.class,0);
		}
		public List<Program_bodyContext> program_body() {
			return getRuleContexts(Program_bodyContext.class);
		}
		public Program_bodyContext program_body(int i) {
			return getRuleContext(Program_bodyContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HallelujahLangVisitor ) return ((HallelujahLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

					List<ASTNode> body = new ArrayList<ASTNode>();
					HashMap<String, Object> symbolTable = new HashMap<String, Object>();
				
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(87);
				((ProgramContext)_localctx).package_declaration = package_declaration();
				}
			}

			body.add(((ProgramContext)_localctx).package_declaration.node);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27021597764231456L) != 0)) {
				{
				{
				setState(91);
				((ProgramContext)_localctx).program_body = program_body();
				body.add(((ProgramContext)_localctx).program_body.node);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

					for (ASTNode n : body) {
						n.execute(symbolTable);
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Package_declarationContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public TerminalNode PACKAGE() { return getToken(HallelujahLangParser.PACKAGE, 0); }
		public TerminalNode ID() { return getToken(HallelujahLangParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(HallelujahLangParser.SEMICOLON, 0); }
		public Package_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).enterPackage_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).exitPackage_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HallelujahLangVisitor ) return ((HallelujahLangVisitor<? extends T>)visitor).visitPackage_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_declarationContext package_declaration() throws RecognitionException {
		Package_declarationContext _localctx = new Package_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(PACKAGE);
			setState(102);
			((Package_declarationContext)_localctx).ID = match(ID);
			setState(103);
			match(SEMICOLON);
			((Package_declarationContext)_localctx).node =  new PackageDeclaration((((Package_declarationContext)_localctx).ID!=null?((Package_declarationContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Program_bodyContext extends ParserRuleContext {
		public ASTNode node;
		public Class_declarationContext class_declaration;
		public Interface_declarationContext interface_declaration;
		public Package_importContext package_import;
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Interface_declarationContext interface_declaration() {
			return getRuleContext(Interface_declarationContext.class,0);
		}
		public Package_importContext package_import() {
			return getRuleContext(Package_importContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).enterProgram_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).exitProgram_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HallelujahLangVisitor ) return ((HallelujahLangVisitor<? extends T>)visitor).visitProgram_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_body);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((Program_bodyContext)_localctx).class_declaration = class_declaration();
				((Program_bodyContext)_localctx).node =  ((Program_bodyContext)_localctx).class_declaration.node;
				}
				break;
			case INTERFACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				((Program_bodyContext)_localctx).interface_declaration = interface_declaration();
				((Program_bodyContext)_localctx).node =  ((Program_bodyContext)_localctx).interface_declaration.node;
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				((Program_bodyContext)_localctx).package_import = package_import();
				((Program_bodyContext)_localctx).node =  ((Program_bodyContext)_localctx).package_import.node;
				}
				break;
			case LINE_COMMENT:
			case MULTILINE_COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				comment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Package_importContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public TerminalNode IMPORT() { return getToken(HallelujahLangParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(HallelujahLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HallelujahLangParser.ID, i);
		}
		public TerminalNode SEMICOLON() { return getToken(HallelujahLangParser.SEMICOLON, 0); }
		public TerminalNode DOT() { return getToken(HallelujahLangParser.DOT, 0); }
		public Package_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).enterPackage_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).exitPackage_import(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HallelujahLangVisitor ) return ((HallelujahLangVisitor<? extends T>)visitor).visitPackage_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_importContext package_import() throws RecognitionException {
		Package_importContext _localctx = new Package_importContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_package_import);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IMPORT);
			setState(119);
			((Package_importContext)_localctx).ID = match(ID);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(120);
				match(DOT);
				setState(121);
				((Package_importContext)_localctx).ID = match(ID);
				}
			}

			setState(124);
			match(SEMICOLON);
			((Package_importContext)_localctx).node =  new PackageImport((((Package_importContext)_localctx).ID!=null?((Package_importContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_declarationContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public Class_bodyContext class_body;
		public TerminalNode CLASS() { return getToken(HallelujahLangParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(HallelujahLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HallelujahLangParser.ID, i);
		}
		public TerminalNode LBRACE() { return getToken(HallelujahLangParser.LBRACE, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(HallelujahLangParser.RBRACE, 0); }
		public TerminalNode EXTENDS() { return getToken(HallelujahLangParser.EXTENDS, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(HallelujahLangParser.IMPLEMENTS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(HallelujahLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HallelujahLangParser.COMMA, i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).enterClass_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HallelujahLangListener ) ((HallelujahLangListener)listener).exitClass_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HallelujahLangVisitor ) return ((HallelujahLangVisitor<? extends T>)visitor).visitClass_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(CLASS);
			setState(128);
			((Class_declarationContext)_localctx).ID = match(ID);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(129);
				match(EXTENDS);
				setState(130);
				((Class_declarationContext)_localctx).ID = match(ID);
				}
			}
